--- a/app/src/main/res/layout/phim_item_layout.xml
+++ b/app/src/main/res/layout/phim_item_layout.xml
@@ -1,15 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginRight="5dp"
+    android:background="@color/black"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/ivAnh"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="123sp"
-        android:layout_height="172sp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/film_poster" />
+        android:layout_height="172sp">
+
+        <ImageView
+            android:id="@+id/ivAnh"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/film_poster"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvSoTap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tập 10/10"
+            android:background="#265DA1"
+            android:backgroundTint="#265DA1"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="3dp"
+            android:layout_margin="5dp"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/tvTenPhim"
