--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blackwhitegradientbackground"
-    tools:context=".fragments.loginSignUpFragments.IntroduceFragment"
+    tools:context=".fragments.loginSignUpFragments.LoginFragment"
 
     >
 
