--- a/app/src/main/res/layout/phim_item_layout.xml
+++ b/app/src/main/res/layout/phim_item_layout.xml
@@ -5,7 +5,10 @@
     android:layout_height="wrap_content"
     android:layout_marginRight="5dp"
     android:background="@color/black"
-    android:orientation="vertical">
+    android:orientation="vertical"
+
+    android:layout_marginTop="10dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="123sp"
