--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
 
 
     <androidx.core.widget.NestedScrollView
+        android:layout_marginBottom="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
