--- a/app/src/main/res/layout/fragment_phim.xml
+++ b/app/src/main/res/layout/fragment_phim.xml
@@ -319,7 +319,54 @@
                 android:id="@+id/rvBinhLuan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="20dp"
+                tools:itemCount="5"
+                tools:listitem="@layout/comment_item_layout"
+
+                />
+            <TextView
+                android:id="@+id/tvKoCmt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Phim này chưa có bình luận"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                />
+
+<ProgressBar
+    android:id="@+id/progressBar"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:indeterminateTint="@color/white"
+    android:layout_gravity="center"
+    />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/btnCmtBefore"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/baseline_keyboard_double_arrow_left_24"
+                    app:tint="@color/white" />
+
+                <ImageButton
+                    android:id="@+id/btnCmtAfter"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/baseline_keyboard_double_arrow_right_24"
+                    app:tint="@color/white" />
+
+            </LinearLayout>
         </LinearLayout>
 
 
