--- a/app/src/main/res/layout/fragment_saved_movie.xml
+++ b/app/src/main/res/layout/fragment_saved_movie.xml
@@ -30,6 +30,7 @@
         app:layout_constraintStart_toStartOf="@id/glLeft"
         app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:foregroundGravity="center_vertical"
         />
 <ProgressBar
     android:id="@+id/progressBar"
