--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout2"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:fillViewport="true"
-    >
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -50,7 +49,7 @@
 
         <TextView
 
-            android:id="@+id/tvTenUser"
+            android:id="@+id/tvUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -62,6 +61,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivAnhUser" />
 
+
         <TextView
             android:id="@+id/tvTien"
             android:layout_width="wrap_content"
@@ -71,10 +71,21 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvTenUser"
+            app:layout_constraintTop_toBottomOf="@id/tvUsername"
 
 
             />
+
+        <ImageButton
+            android:id="@+id/btnAddCash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/baseline_add_circle_24"
+            app:layout_constraintStart_toEndOf="@id/tvTien"
+            app:layout_constraintTop_toTopOf="@id/tvTien"
+            app:tint="#4CAF50" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -85,23 +96,6 @@
             app:layout_constraintStart_toStartOf="@id/glLeft"
             app:layout_constraintTop_toBottomOf="@id/tvTien">
 
-            <com.google.android.material.textfield.TextInputLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:hint="Username"
-                android:textColorHint="@color/white">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tvUsername"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:text="parkseojoon123"
-                    android:textColor="#C3FFFFFF" />
-
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
