--- a/app/src/main/res/layout/phim_item_layout.xml
+++ b/app/src/main/res/layout/phim_item_layout.xml
@@ -3,16 +3,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:layout_marginRight="5dp"
     android:background="@color/black"
-    android:orientation="vertical"
 
-    android:layout_marginTop="10dp"
-    >
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="123sp"
         android:layout_height="172sp">
+
+        <LinearLayout
+            android:id="@+id/layoutTien"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#FFE500"
+            android:elevation="10dp"
+            android:orientation="horizontal"
+            android:paddingRight="5dp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="20dp"
+                android:src="@drawable/baseline_paid_24"
+                app:tint="@color/green" />
+
+            <TextView
+                android:id="@+id/tvTien"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="9999"
+                android:textColor="@color/green"
+                android:textSize="10sp"
+                android:textStyle="bold"
+
+                />
+
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/ivAnh"
@@ -29,17 +60,16 @@
             android:id="@+id/tvSoTap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tập 10/10"
+            android:layout_margin="5dp"
             android:background="#265DA1"
             android:backgroundTint="#265DA1"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="11sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:padding="3dp"
-            android:layout_margin="5dp"
-            />
+            android:text="Tập 10/10"
+            android:textColor="@color/white"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
