--- a/app/src/main/res/layout/phim_search_item_layout.xml
+++ b/app/src/main/res/layout/phim_search_item_layout.xml
@@ -16,13 +16,30 @@
 
     <TextView
         android:id="@+id/tvTenPhim"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
+        android:layout_weight="3"
         android:gravity="center_vertical"
-        android:textSize="15sp"
         android:text="Đảo Hải Tặc"
         android:textColor="@color/white"
+        android:textSize="15sp"
         android:textStyle="bold" />
+
+    <TextView
+
+        android:id="@+id/tvTien"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:drawableLeft="@drawable/baseline_paid_24"
+        android:drawableTint="@color/green"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:text="9999"
+        android:textColor="@color/green"
+        android:textSize="10sp"
+        android:textStyle="bold"
+
+        />
 
 </LinearLayout>
