--- a/app/src/main/res/layout/dialog_buy_movie.xml
+++ b/app/src/main/res/layout/dialog_buy_movie.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/layout_border"
+  app:cardBackgroundColor="@color/black"
     android:backgroundTint="#000000"
-    android:padding="20dp">
+    android:padding="20dp"
+    app:strokeColor="#FFC107"
+    app:strokeWidth="2dp"
+    >
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:padding="10dp">
     <TextView
         android:id="@+id/thanhToan"
         android:layout_width="wrap_content"
@@ -22,38 +31,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hiện có : "
-        android:textColor="@color/white"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/thanhToan"
-
-        />
-
-    <TextView
-        android:id="@+id/tvUserMoney"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:drawableTint="#FFE500"
-        android:text="9999"
-        android:textColor="#FFE500"
-        android:textSize="15sp"
-        app:drawableLeftCompat="@drawable/baseline_paid_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/thanhToan" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Giá phim : "
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvUserMoney"
-
-        />
+        app:layout_constraintTop_toBottomOf="@id/thanhToan"
+        tools:layout_editor_absoluteY="81dp" />
 
     <TextView
         android:id="@+id/tvMoneyPrice"
@@ -62,39 +46,50 @@
         android:layout_marginTop="10dp"
         android:drawablePadding="5dp"
         android:drawableTint="#FFE500"
+        android:gravity="center_vertical"
         android:text="123"
         android:textColor="#FFE500"
         android:textSize="15sp"
         app:drawableLeftCompat="@drawable/baseline_paid_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvUserMoney" />
+        app:layout_constraintTop_toBottomOf="@id/thanhToan"
+        tools:layout_editor_absoluteY="81dp" />
 
-    <TextView
-        android:id="@+id/tvSoDuKhongDu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Số dư của bạn không đủ "
-        android:textColor="#8BFFFFFF"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvMoneyPrice"
-
-        />
-
-    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/btnConfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@drawable/rectangle_button"
-        android:backgroundTint="#1083DD"
-        android:text="Xác nhận mua"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/tvSoDuKhongDu" />
+        app:cardCornerRadius="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tvMoneyPrice">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#03A9F4"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+<!--            <ImageView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_weight="1"-->
+<!--                android:src="@drawable/zalopayvuong"-->
+
+<!--                />-->
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="9"
+                android:text="Mua Phim"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
     <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
         android:id="@+id/btnHuy"
@@ -108,4 +103,5 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/btnConfirm" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
