--- a/app/src/main/res/layout/fragment_movie_bought.xml
+++ b/app/src/main/res/layout/fragment_movie_bought.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".fragments.SavedMovieFragment">
+    tools:context=".fragments.MovieBoughtFragment">
 
     <TextView
         android:id="@+id/tvTrong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Danh sách phim đã lưu trống"
+        android:text="Danh sách phim đã mua trống"
         android:textColor="#86FFFFFF"
         android:textStyle="bold"
         android:textSize="18sp"
@@ -21,13 +21,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone"
         />
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phim đã lưu"
+        android:text="Phim đã mua"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="25sp"
@@ -44,18 +43,18 @@
         app:layout_constraintStart_toStartOf="@id/glLeft"
         app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:foregroundGravity="center_horizontal"
+        android:foregroundGravity="center_vertical"
         />
-<ProgressBar
-    android:id="@+id/progressBar"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintEnd_toEndOf="@id/glRight"
-    app:layout_constraintStart_toStartOf="@id/glLeft"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    android:indeterminateTint="@color/white"
-    />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@id/glRight"
+        app:layout_constraintStart_toStartOf="@id/glLeft"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:indeterminateTint="@color/white"
+        />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glLeft"
         android:layout_width="wrap_content"
