--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
     android:background="@drawable/blackwhitegradientbackground"
+    android:fillViewport="true"
     tools:context=".fragments.loginSignUpFragments.SignUpFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,7 +45,7 @@
                 android:textColorHint="@color/white"
                 app:boxStrokeColor="@color/white"
                 app:boxStrokeWidth="0dp"
-
+                app:errorTextColor="#C34A4A"
                 app:hintTextColor="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -69,7 +69,7 @@
                 android:textColorHint="@color/white"
                 app:boxStrokeColor="@color/white"
                 app:boxStrokeWidth="0dp"
-
+                app:errorTextColor="#C34A4A"
                 app:hintTextColor="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -94,6 +94,7 @@
                 android:textColorHint="@color/white"
                 app:boxStrokeColor="@color/white"
                 app:boxStrokeWidth="0dp"
+                app:errorTextColor="#C34A4A"
                 app:hintTextColor="@color/white"
                 app:passwordToggleEnabled="true"
                 app:passwordToggleTint="@color/white">
@@ -107,6 +108,7 @@
                     android:textColorHint="@color/white"
                     android:textSize="13sp" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tvRePass"
                 android:layout_width="match_parent"
@@ -117,6 +119,7 @@
                 android:textColorHint="@color/white"
                 app:boxStrokeColor="@color/white"
                 app:boxStrokeWidth="0dp"
+                app:errorTextColor="#C34A4A"
                 app:hintTextColor="@color/white"
                 app:passwordToggleEnabled="true"
                 app:passwordToggleTint="@color/white">
@@ -130,17 +133,8 @@
                     android:textColorHint="@color/white"
                     android:textSize="13sp" />
             </com.google.android.material.textfield.TextInputLayout>
-            <TextView
-                android:id="@+id/tvForgotPass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Quên mật khẩu ?"
-                android:textAlignment="center"
-                android:textColor="#FFD500"
-                android:textSize="13sp"
 
-                />
+
 
             <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
 
@@ -217,8 +211,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.85" />
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
