--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -62,39 +62,14 @@
             app:layout_constraintTop_toBottomOf="@id/ivAnhUser" />
 
 
-        <TextView
-            android:id="@+id/tvTien"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="$ 9999"
-            android:textColor="#FFE500"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvUsername"
-
-
-            />
-
-        <ImageButton
-            android:id="@+id/btnAddCash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:background="?android:selectableItemBackgroundBorderless"
-            android:src="@drawable/baseline_add_circle_24"
-            app:layout_constraintStart_toEndOf="@id/tvTien"
-            app:layout_constraintTop_toTopOf="@id/tvTien"
-            app:tint="#4CAF50" />
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="@id/glRight"
             app:layout_constraintStart_toStartOf="@id/glLeft"
-            app:layout_constraintTop_toBottomOf="@id/tvTien">
+            app:layout_constraintTop_toBottomOf="@id/tvUsername"
+            android:layout_marginTop="30dp">
 
 
             <com.google.android.material.textfield.TextInputLayout
